tests/baselines/reference/internalImportInstantiatedModuleMergedWithClassNotReferencingInstance.errors.txt
==== tests/cases/compiler/internalImportInstantiatedModuleMergedWithClassNotReferencingInstance.ts (1 errors) ====
    class A {
        aProp: string;
    }
    module A {
        export interface X { s: string }
        export var a = 10;
    }
    
    module B {
        var A = 1;
        import Y = A;
                   ~
!!! internalImportInstantiatedModuleMergedWithClassNotReferencingInstance.ts(11,16): error TS2187: Internal module reference 'A' in import declaration does not reference module instance for 'A'.
    }
    